modification de index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>GitHub</h1>
+    <label for="">Nom</label>
+    <input type="text">
+
+    <label for="">Prenom</label>
+    <input type="text">
+
+    <label for="">Email</label>
+    <input type="email" name="" id="">
+
+    <label for="">Password</label>
+    <input type="password" name="" id="">
+
+    <input type="submit" value="">
 </body>
 </html>
